--- a/app/src/main/res/layout/activity_run.xml
+++ b/app/src/main/res/layout/activity_run.xml
@@ -7,20 +7,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorAsh"
-    tools:context=".MainActivity">
+    tools:context=".NewRunActivity">
 
     <FrameLayout
         android:id="@+id/fragment_container"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/navigation"
+        app:layout_constraintBottom_toTopOf="@+id/navigation2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         />
 
     <android.support.design.widget.BottomNavigationView
-        android:id="@+id/navigation"
+        android:id="@+id/navigation2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@color/colorNavBar"
@@ -29,6 +29,91 @@
         app:layout_constraintRight_toRightOf="parent"
         app:itemIconTint="@color/colorAccent"
         app:itemTextColor="@color/colorAccent2"
-        app:menu="@menu/navigation" />
+        app:menu="@menu/navigation2" />
+
+    <Button
+        android:id="@+id/saveButton"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+
+        android:layout_marginBottom="16dp"
+        android:background="@color/colorFragment"
+        android:text="@string/saveRun"
+        android:textColor="@color/colorAccent"
+
+        app:layout_constraintDimensionRatio="H,3:1"
+        app:layout_constraintBottom_toTopOf="@id/navigation2"
+        app:layout_constraintLeft_toRightOf="@+id/middleGuideline2"
+        app:layout_constraintRight_toLeftOf="@id/endGuideline"
+        />
+
+    <Button
+        android:id="@+id/cancelButton"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+
+        android:layout_marginBottom="16dp"
+        android:background="@color/colorFragment"
+        android:text="@string/cancelButton"
+        android:textColor="@color/colorAccent"
+
+        app:layout_constraintDimensionRatio="H,3:1"
+        app:layout_constraintBottom_toTopOf="@id/navigation2"
+        app:layout_constraintLeft_toRightOf="@+id/leftGuideline"
+        app:layout_constraintRight_toLeftOf="@id/middleGuideline"/>
+
+
+    <android.support.constraint.Guideline
+        android:id="@+id/leftGuideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.1">
+
+    </android.support.constraint.Guideline>
+
+
+    <android.support.constraint.Guideline
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:id="@+id/middleGuideline"
+        app:layout_constraintGuide_percent="0.4"
+        android:orientation="vertical"
+        >
+
+    </android.support.constraint.Guideline>
+
+
+    <android.support.constraint.Guideline
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:id="@+id/endGuideline"
+        app:layout_constraintGuide_percent="0.9"
+        android:orientation="vertical"
+        >
+
+    </android.support.constraint.Guideline>
+
+    <android.support.constraint.Guideline
+        android:id="@+id/extraMiddleGuideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="192dp">
+
+    </android.support.constraint.Guideline>
+
+    <android.support.constraint.Guideline
+        android:id="@+id/middleGuideline2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:scrollX="128dp"
+        android:scrollY="128dp"
+        android:scrollbarSize="64dp"
+        android:scrollbars="horizontal"
+        app:layout_constraintGuide_percent="0.6">
+
+    </android.support.constraint.Guideline>
 
 </android.support.constraint.ConstraintLayout>
