--- a/app/src/main/res/layout/run_card_view.xml
+++ b/app/src/main/res/layout/run_card_view.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorAsh"
@@ -94,7 +95,7 @@
 
             android:text="@string/runDate"
             android:textColor="@color/colorAccent"
-            android:textSize="10sp"
+            android:textSize="30dp"
 
             app:layout_constraintBottom_toBottomOf="@id/runName"
             app:layout_constraintDimensionRatio="H,3:1"
@@ -142,6 +143,16 @@
 
             app:layout_constraintLeft_toRightOf="@id/centerGuide"
             app:layout_constraintTop_toBottomOf="@id/runLength" />
+
+        <Button
+            android:id="@+id/deleteButton"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="@android:drawable/ic_delete"
+            android:backgroundTint="@color/colorAccent2"
+            android:elevation="10dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="100dp" />
 
     </android.support.constraint.ConstraintLayout>
 
