--- a/app/src/main/res/menu/navigation2.xml
+++ b/app/src/main/res/menu/navigation2.xml
@@ -3,23 +3,15 @@
     android:background="@color/colorAsh">
 
     <item
-        android:id="@+id/navigator_new_run"
+        android:id="@+id/navigator_current_new_run"
         android:icon="@drawable/ic_add"
-        android:title="@string/startRun" />
+        android:title="@string/currentRun" />
 
     <item
-        android:id="@+id/navigator_saved_runs"
-        android:icon="@drawable/ic_group"
-        android:title="@string/saved_runs" />
-
-    <item
-        android:id="@+id/navigator_graphed_run"
+        android:id="@+id/navigator_current_graphed_run"
         android:icon="@drawable/ic_timeline"
         android:title="@string/see_graph" />
 
-    <item
-        android:id="@+id/navigator_settings"
-        android:icon="@drawable/ic_settings"
-        android:title="@string/settings" />
+
 
 </menu>
