--- a/app/src/main/res/layout/activity_new_run.xml
+++ b/app/src/main/res/layout/activity_new_run.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorAsh">
+    android:background="@drawable/gradient_3">
 
     <android.support.constraint.Guideline
         android:id="@+id/leftGuideline"
