--- a/app/src/main/res/layout/create_graph_fragment.xml
+++ b/app/src/main/res/layout/create_graph_fragment.xml
@@ -8,14 +8,15 @@
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintBottom_toBottomOf="parent">
+    app:layout_constraintBottom_toBottomOf="parent"
+    android:background="@drawable/gradient_1">
 
             <TextView
                 android:id="@+id/graphTitle"
                 android:layout_width="232dp"
                 android:layout_height="60dp"
                 android:layout_marginTop="16dp"
-                android:background="@color/colorAccentOpaque"
+                android:background="@drawable/gradient_3"
                 android:clickable="false"
                 android:gravity="center_vertical"
                 android:text="example graph"
