--- a/app/src/main/res/layout/saved_run_fragment.xml
+++ b/app/src/main/res/layout/saved_run_fragment.xml
@@ -5,9 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
-    android:background="@color/colorAsh"
+    android:background="@drawable/gradient_2"
 
     >
+
     <android.support.constraint.Guideline
         android:id="@+id/leftGuide"
         android:layout_width="wrap_content"
@@ -28,7 +29,7 @@
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
+        android:background="@drawable/gradient_2"
         >
 
     </android.support.v7.widget.RecyclerView>
