--- a/app/src/main/res/layout/run_card_view.xml
+++ b/app/src/main/res/layout/run_card_view.xml
@@ -8,6 +8,7 @@
     android:layout_height="match_parent"
     android:background="@color/noColor"
     android:padding="10dp"
+    android:layout_centerHorizontal="true"
     >
 
     <android.support.constraint.Guideline
@@ -27,9 +28,10 @@
     <android.support.v7.widget.CardView
 
         android:id="@+id/cardView"
-        android:layout_width="380dp"
+        android:layout_width="400dp"
         android:layout_height="wrap_content"
         android:clickable="true"
+
 
 
         card_view:cardBackgroundColor="@color/noColor"
@@ -44,7 +46,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clickable="true"
-        android:background="@color/colorAsh">
+        android:background="@color/colorAsh"
+        android:layout_centerHorizontal="true">
 
         <android.support.constraint.Guideline
             android:id="@+id/centerGuide"
@@ -153,7 +156,8 @@
             android:backgroundTint="@color/colorAccent2"
             android:elevation="10dp"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="100dp" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="0dp" />
 
     </android.support.constraint.ConstraintLayout>
 
