--- a/app/src/main/res/layout/create_graph_fragment.xml
+++ b/app/src/main/res/layout/create_graph_fragment.xml
@@ -29,12 +29,12 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <com.jjoe64.graphview.GraphView
+            <com.github.mikephil.charting.charts.LineChart
                 android:id="@+id/graph"
                 android:layout_marginTop="40dp"
                 android:layout_width="0dp"
-                android:layout_height="200dip"
-                app:layout_constraintHeight_percent="0.5"
+                android:layout_height="0dp"
+                app:layout_constraintHeight_percent="0.75"
                 app:layout_constraintTop_toBottomOf="@id/graphTitle"
                 app:layout_constraintStart_toEndOf="@id/leftLine"
                 app:layout_constraintEnd_toStartOf="@id/rightLine"/>
@@ -52,6 +52,8 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.92" />
+
+
 
 
 </android.support.constraint.ConstraintLayout>
