--- a/app/src/main/res/layout/current_graph_fragment.xml
+++ b/app/src/main/res/layout/current_graph_fragment.xml
@@ -6,12 +6,12 @@
     android:layout_height="match_parent"
     android:background="@drawable/gradient_3">
 
-    <com.jjoe64.graphview.GraphView
+    <com.github.mikephil.charting.charts.LineChart
         android:id="@+id/running_graph"
-        android:layout_marginTop="120dp"
+        android:layout_marginTop="40dp"
         android:layout_width="0dp"
-        android:layout_height="400dip"
-        app:layout_constraintHeight_percent="0.5"
+        android:layout_height="0dp"
+        app:layout_constraintHeight_percent="0.75"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toEndOf="@id/leftLine"
         app:layout_constraintEnd_toStartOf="@id/rightLine"/>
@@ -21,7 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.08" />
+        app:layout_constraintGuide_percent="0.05" />
 
     <android.support.constraint.Guideline
         android:id="@+id/rightLine"
