--- a/app/src/main/res/layout/run_card_view.xml
+++ b/app/src/main/res/layout/run_card_view.xml
@@ -99,7 +99,8 @@
 
             android:text="@string/runDate"
             android:textColor="@color/colorAccent"
-            android:textSize="30dp"
+            android:textSize="20sp"
+
 
             app:layout_constraintBottom_toBottomOf="@id/runName"
             app:layout_constraintDimensionRatio="H,3:1"
